# soldb

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  MANIFEST.in  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  rust.yml
crates/soldb-bridge/: Cargo.toml
crates/soldb-bridge/src/: lib.rs
crates/soldb-cli/: Cargo.toml
crates/soldb-cli/src/: main.rs
crates/soldb-cli/tests/: trace_cli.rs
crates/soldb-compiler/: Cargo.toml
crates/soldb-compiler/src/: lib.rs
crates/soldb-core/: Cargo.toml
crates/soldb-core/src/: lib.rs
crates/soldb-dap/: Cargo.toml
crates/soldb-dap/src/: lib.rs  main.rs  server.rs
crates/soldb-debugger/: Cargo.toml
crates/soldb-debugger/src/: lib.rs
crates/soldb-ethdebug/: Cargo.toml
crates/soldb-ethdebug/src/: abi.rs  events.rs  lib.rs  metadata.rs  source_map.rs
crates/soldb-repl/: Cargo.toml
crates/soldb-repl/src/: lib.rs
crates/soldb-rpc/: Cargo.toml
crates/soldb-rpc/src/: lib.rs
crates/soldb-serializer/: Cargo.toml
crates/soldb-serializer/src/: lib.rs
docs/: Stylus.md  architecture.md  commands.md  ethdebug-debugger-contract.md  json.md  port-to-rust.md
examples/: ErrorHandling.sol
examples/multi_contract/: contracts.json
rust/: Cargo.toml  MIGRATION.md
rust/src/: main.rs
src/soldb/: __init__.py  auto_deploy.py  colors.py  compile_ethdebug.py  compiler_config.py  dap_server.py  ethdebug_dir_parser.py  ethdebug_parser.py  evm_repl.py  helpers.py  json_serializer.py  main.py  multi_contract_ethdebug_parser.py  rust_cli.py  source_file_loader.py  source_mapping_manager.py  srcmap_parser.py  transaction_tracer.py  utils.py
src/soldb/cli/: __init__.py  bridge.py  common.py  contracts.py  events.py  main.py  simulate.py  trace.py
src/soldb/compiler/: __init__.py  config.py  ethdebug.py
src/soldb/core/: __init__.py  auto_deploy.py  evm_repl.py  serializer.py  transaction_tracer.py
src/soldb/cross_env/: __init__.py  bridge_client.py  bridge_server.py  contract_registry.py  protocol.py
src/soldb/parsers/: __init__.py  abi.py  dwarf.py  ethdebug.py  source_map.py
src/soldb/utils/: __init__.py  colors.py  exceptions.py  helpers.py  logging.py
src/tools/: __init__.py  dap_server.py  dap_utils.py  rust_dap_cli.py
src/walnut_cli/: main.py
test/: README.md  conftest.py  create-multi-tx-block.sh  create-nested-call-tx.sh  create-replay-parity-tx.sh  deploy-contract.sh  deploy-test-contract.sh  increment-trace.test  interact-contract.sh  lit.cfg.py  lit.site.cfg.py  no-debug-rpc-proxy.py  run-tests.sh  test-setup.sh
test/cli/: bridge-invalid-host.test  help.test  list-contracts-basic.test  missing-command.test
test/events/: balance-updated-decoded-json.test  balance-updated-decoded.test  invalid-transaction-json.test  multiple-events-json.test  multiple-events.test  no-events-json.test  no-events.test  sepolia-events.test  sepolia-json-events.test
test/fixtures/: NestedCalls.sol
test/integration/: conftest.py  test_analyze_function_calls.py  test_cli_commands.py  test_cli_compiler_auto_deploy.py  test_cli_trace_and_simulate.py  test_debugger_session.py  test_parser_edge_cases.py  test_parsers_and_serializer.py  test_simulate_interactive.py  test_tracer_analyze_rich.py
test/simulate/: basic-simulate.test  interactive-simulate.test  invalid-value-json.test  json-simulate.test  missing-function-signature.test  multi-contract-simulate-sepolia.test  no-debug-info.test  raw-data-argument-error.test  raw-data-simulate.test  raw-simulate.test  wrong-argument-count.test
test/stylus/: README.md  deploy.sh  deployment.env  stylus-contracts.json
test/stylus/counter/: Cargo.toml  Stylus.toml  deploy.sh  deployment.env
test/stylus/counter/src/: lib.rs  main.rs
test/stylus/solidity-caller/: StylusCounterCaller.sol
test/trace/: auto-backend-fallback.test  basic-trace.test  increment-trace-legacy.test  increment-trace.test  interactive-trace.test  invalid-transaction-json.test  json-trace.test  multi-contract-non-verified-sepolia.test  multi-contract-sepolia.test  raw-trace.test  replay-backend.test  replay-contract-creation.test  replay-multi-tx-block.test  replay-nested-json.test  replay-revert.test  replay-update-balance.test  stylus-interop.test
test/unit/: test_bridge_client.py  test_cli_bridge.py  test_cli_compiler_auto_deploy.py  test_cli_contracts.py  test_cli_events.py  test_cli_main.py  test_compile_ethdebug_run.py  test_compiler_and_tracer.py  test_compiler_config.py  test_parsers_and_serializer.py  test_protocol_registry.py  test_repl.py  test_repl_and_tracer_expanded.py  test_rust_cli.py  test_serializer.py  test_tracer_decode_and_format.py  test_tracer_helpers.py  test_transaction_tracer_helpers.py  test_utils_abi.py  test_utils_abi_common.py  test_utils_colors.py  test_utils_helpers.py  test_utils_logging.py
test/walnut_0x75964ba0087ff8ae69bd7c17c8c4db66bc0c8e75603f79de1265c61ddfd98f2e_1756985337815_2zvewt/0x6a85ebf0Eba5307943bDF27D02d198Bc64e9ffEd/: metadata.json
test/walnut_0x75964ba0087ff8ae69bd7c17c8c4db66bc0c8e75603f79de1265c61ddfd98f2e_1756985337815_2zvewt/0x6a85ebf0Eba5307943bDF27D02d198Bc64e9ffEd/debug/: TaxCalculator.abi  TaxCalculator_ethdebug-runtime.json  TaxCalculator_ethdebug.json  ethdebug.json
test/walnut_0x75964ba0087ff8ae69bd7c17c8c4db66bc0c8e75603f79de1265c61ddfd98f2e_1756985337815_2zvewt/0xbE734aD6434E16f6bE04706005faED6fD38eb2B2/: metadata.json
test/walnut_0x75964ba0087ff8ae69bd7c17c8c4db66bc0c8e75603f79de1265c61ddfd98f2e_1756985337815_2zvewt/0xbE734aD6434E16f6bE04706005faED6fD38eb2B2/debug/: ShippingManager.abi  ShippingManager_ethdebug-runtime.json  ShippingManager_ethdebug.json  ethdebug.json
test/walnut_0x75964ba0087ff8ae69bd7c17c8c4db66bc0c8e75603f79de1265c61ddfd98f2e_1756985337815_2zvewt/0xf776FF56e2400e31f3070c1ac70Ab80433B01823/: metadata.json
tools/: dap_server.py
(+4 files in other folders)
