[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soldb"
version = "0.1.0"
description = "A powerful debugger for Solidity transactions on the Ethereum blockchain"
readme = "README.md"
authors = [
    {name = "Walnut", email = "hi@walnut.dev"}
]
license = "GPL-3.0-only"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Monitoring",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["ethereum", "solidity", "debugger", "evm", "blockchain", "smart-contracts"]
requires-python = ">=3.8"
dependencies = [
    "web3>=6.0.0",
    "eth-utils>=2.0.0", 
    "hexbytes>=0.3.0",
    "pyelftools>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "lit>=18.0.0",
    "coverage[toml]>=7.0.0",
    "diff-cover>=9.0.0",
    "black>=22.0.0",
    "mypy>=0.990",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/walnuthq/soldb"
Documentation = "https://github.com/walnuthq/soldb#readme"
Repository = "https://github.com/walnuthq/soldb.git"
Issues = "https://github.com/walnuthq/soldb/issues"

[project.scripts]
soldb = "soldb.cli.main:main"
soldb-dap-server = "tools.dap_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
soldb = ["py.typed"]

[tool.coverage.run]
branch = true
parallel = true
relative_files = true
source = ["soldb", "tools"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
fail_under = 30
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
