[package]
name = "soldb-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
soldb-core = { path = "../soldb-core" }
soldb-rpc = { path = "../soldb-rpc" }

[lints]
workspace = true
