[package]
name = "soldb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "soldb"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde_json.workspace = true
soldb-core = { path = "../soldb-core" }
soldb-ethdebug = { path = "../soldb-ethdebug" }
soldb-rpc = { path = "../soldb-rpc" }
soldb-serializer = { path = "../soldb-serializer" }

[lints]
workspace = true
