[package]
name = "soldb-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
soldb-core = { path = "../soldb-core" }
soldb-ethdebug = { path = "../soldb-ethdebug" }
soldb-rpc = { path = "../soldb-rpc" }

[lints]
workspace = true
