[package]
name = "soldb-debugger"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
soldb-core = { path = "../soldb-core" }
soldb-ethdebug = { path = "../soldb-ethdebug" }

[lints]
workspace = true
