[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "^1.0.1"
alloy-sol-types = "^1.0.1"
stylus-sdk = "0.10.0-rc.1"

[dev-dependencies]
stylus-sdk = { version = "0.10.0-rc.1", features = ["stylus-test"] }

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["mini-alloc"]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]
mini-alloc = ["stylus-sdk/mini-alloc"]
contract-client-gen = []

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"

# If you need to reduce the binary size, it is advisable to try other
# optimization levels, such as "s" and "z"
opt-level = 3
